--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - 'main'
+env:
+  CONTAINER_REGISTRY: ghcr.io
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +16,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push
@@ -22,4 +24,4 @@ jobs:
         with:
           push: true
           tags: |
-            ${{ github.repository }}:${{ github.sha }}
+            ${{ env.CONTAINER_REGISTRY }}/${{ github.repository }}:${{ github.sha }}
