--- a/helm/simple-web-server/values.yaml
+++ b/helm/simple-web-server/values.yaml
@@ -5,18 +5,20 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: ghcr.io/devops-in-wonderland/simple-web-server
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
-imagePullSecrets: []
+imagePullSecrets:
+  - name: regcred
+  
 nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Automatically mount a ServiceAccount's API credentials?
   automount: true
   # Annotations to add to the service account
