--- a/helm/simple-web-server/values.yaml
+++ b/helm/simple-web-server/values.yaml
@@ -103,7 +103,7 @@ volumes:
       claimName: simple-web-server-pvc
 
 volumeMounts:
-  - mountPath: "/app/test-results"
+  - mountPath: "/app/uploads"
     name: simple-web-server-storage
 
 nodeSelector: {}
